@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/ntrack
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*ntrack-0.16 (07 Mar 2012)
+
+  07 Mar 2012; Michał Ziąbkowski <mziab@o2.pl> +ntrack-0.16.ebuild:
+  Bumped.
 
 *ntrack-0.14-r2 (25 Sep 2011)
 
